fixed logo overlapping buttons when zooming in
When we zoom in the page, the logo overlaps the other buttons on the side menu. Now when you zoom in, the logo will stay in the bottom and if you can't see it anymore, a scroll bar will be appear to go down to the logo. No overlapping occurs anymore.

--- a/RecommendationEngine/RecommendationEngine/FrontEnd/src/containers/SideMenu/SideMenu.css
+++ b/RecommendationEngine/RecommendationEngine/FrontEnd/src/containers/SideMenu/SideMenu.css
@@ -10,6 +10,9 @@
 .drawer-paper.MuiDrawer-paper{
     width: 250px;
     background-color: #212529;
+    display: flex;
+    flex-direction: column;
+    justify-content : space-between;
 }
 
 .top-header{
@@ -80,6 +83,6 @@
 
 .logo{
     align-self: flex-end;
-    position: fixed;
-    bottom: 0;
 }
+
+
